--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,30 @@
             robotFace.src = "/images/waiting.png";
             robotContainer.appendChild(robotTalk);
             robotContainer.appendChild(robotFace);
+            // predict can take in an image, video or canvas html element
+            const prediction = await model.predict(webcam.canvas);
+            for (let i = 0; i < maxPredictions; i++) {
+              const classPrediction =
+                prediction[i].className +
+                ": " +
+                prediction[i].probability.toFixed(2);
+              labelContainer.childNodes[i].innerHTML = classPrediction;
+              if (
+                prediction[i].className === "happy" &&
+                prediction[i].probability.toFixed(2) >= 0.9
+              ) {
+                robotFace.src = "/images/happy.png";
+                robotTalk.innerText = "I love to see you so happy!";
+              } else if (
+                prediction[i].className === "angry" &&
+                prediction[i].probability.toFixed(2) >= 0.9
+              ) {
+                robotFace.src = "/images/angry.png";
+                robotTalk.innerText = "Destroy! Destroy! Destroy!";
+              }
+              robotContainer.appendChild(robotTalk);
+              robotContainer.appendChild(robotFace);
+            }
           </script>
         </div>
       </div>
